--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       
         <section id="inicio">
             <h2>Bem-vindo à GameVerse</h2>
-            <img src="../img/banner.jpg" alt="Banner com diversos jogos e consoles">
+            <img src="./img/banner.jpg" alt="Banner com diversos jogos e consoles">
             <div class="conteudo-inicio">
                 <div class="texto">
                     <h3>O Universo dos Gamers</h3>
@@ -33,7 +33,7 @@
                     Explore nosso catálogo e leve sua experiência gamer a outro nível.</p>
                 </div>
                 <div class="galeria-mini">
-                    <img src="../img/xbox.jpg" alt="Console de última geração">
+                    <img src="./img/xbox.jpg" alt="Console de última geração">
                 </div>
             </div>
             <a href="#topo" class="voltar">Voltar ao topo</a>
@@ -44,27 +44,27 @@
             <h2>Jogos em Destaque</h2>
             <div class="galeria">
                 <div class="card">
-                    <img src="../img/horizon.webp" alt="Capa do jogo Horizon">
+                    <img src="./img/horizon.webp" alt="Capa do jogo Horizon">
                     <p><strong>Horizon: Forbidden West</strong><br>Aventura em mundo aberto cheia de ação e mistérios.</p>
                 </div>
                 <div class="card">
-                    <img src="../img/god.jpg" alt="Capa do jogo God of War">
+                    <img src="./img/god.jpg" alt="Capa do jogo God of War">
                     <p><strong>God of War: Ragnarök</strong><br>Um épico nórdico repleto de batalhas intensas.</p>
                 </div>
                 <div class="card">
-                    <img src="../img/Elden.jpg" alt="Capa do jogo Elden Ring">
+                    <img src="./img/Elden.jpg" alt="Capa do jogo Elden Ring">
                     <p><strong>Elden Ring</strong><br>Desbrave um vasto mundo sombrio e desafiador.</p>
                 </div>
                 <div class="card">
-                    <img src="../img/Spider.jpg" alt="Capa do jogo Spider-Man">
+                    <img src="./img/Spider.jpg" alt="Capa do jogo Spider-Man">
                     <p><strong>Spider-Man 2</strong><br>Balance-se por Nova York com dois heróis incríveis.</p>
                 </div>
                 <div class="card">
-                    <img src="../img/fifa.jpg" alt="Capa do jogo FIFA 25">
+                    <img src="./img/fifa.jpg" alt="Capa do jogo FIFA 25">
                     <p><strong>EA Sports FC 25</strong><br>Monte seu time dos sonhos e conquiste o mundo.</p>
                 </div>
                 <div class="card">
-                    <img src="../img/mw3.jpg" alt="Capa do jogo Call of Duty">
+                    <img src="./img/mw3.jpg" alt="Capa do jogo Call of Duty">
                     <p><strong>Call of Duty: MW3</strong><br>Ação intensa e multiplayer de tirar o fôlego.</p>
                 </div>
             </div>
